# Kiwas

./: .gitignore  AUTO_UPDATE_IMPLEMENTATION.md  nohup.out  requirements.txt
.github/workflows/: build-desktop.yml  build-windows.yml
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  update.py
desktop/: BUILD_AUTOMATION.md  BUILD_INSTRUCTIONS.md  CHECKLIST.md  CONFIG.md  DISTRIBUTION.md  DLA_KOGO_CO.md  INSTRUKCJA_DLA_UZYTKOWNIKA.md  QUICK_START.md  README.md  START_HERE.md  build-windows.bat  package.json  prepare-build.sh  tsconfig.json  tsconfig.node.json
desktop/public/: index.html
desktop/src/: main.tsx  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
