[package]
name = "notes-desktop"
version = "0.3.2"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
